--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,4 +2,36 @@
     background-color: $color-secondary;
 
     grid-column: full-start / full-end;
+    padding: 8rem;
+}
+
+.nav {
+
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-gap: 2rem;
+    align-items: center;
+
+    &__item {
+    }
+
+    &__link:link,
+    &__link:visited {
+        font-size: 1.4rem;
+        text-decoration: none;
+        color: #fff;
+        font-family: $font-display;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 1.5rem;
+        display: block;
+        transition: all .3s;
+    }
+
+    &__link:hover,
+    &__link:active {
+        background-color: rgba($color: #fff, $alpha: .05);
+        transform: translateY(-3px);
+    }
 }
