--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -64,6 +64,16 @@
     }
 }
 
+.copyright {
+    font-size: 1.4rem;
+    color: $color-grey-light-2;
+    margin-top: 6rem;
+    text-align: center;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .mb-sm { margin-bottom: 2rem; }
 
 .mb-md { margin-bottom: 3rem; }
