--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,6 +1,31 @@
+%btn-lines {
+    background-color: #fff;
+    height: 2px;
+    width: 4.5rem;
+}
+
 .sidebar {
     background-color: $color-primary;
-
     grid-column: sidebar-start / sidebar-end;
     grid-row: 1 / -1;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-btn {
+    @extend %btn-lines;
+
+    border: none;
+    border-radius: 0;
+    margin-top: 4rem;
+
+    &::before,
+    &::after {
+        @extend %btn-lines;
+        content: "";
+        display: block;
+    }
+
+    &::before { transform: translateY(-1.5rem);}
+    &::after { transform: translateY(1.3rem);}
 }
