--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -2,4 +2,36 @@
     background-color: $color-secondary;
 
     grid-column: col-start 7 / full-end;
+    padding: 3rem;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    grid-row-gap: 1.5rem;
+    justify-items: center;
+
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(2, max-content);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 1.5rem;
+        grid-row-gap: 5vh;
+        justify-items: start;
+        align-items: center;
+    }
+
+    &__img {
+        width: 7rem;
+        border-radius: 50%;
+        display: block;
+    }
+
+    &__details {
+
+    }
+
+    &__sold {
+        text-transform: uppercase;
+        color: $color-grey-light-2;
+        margin-top: -3px;
+    }
 }
