--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,14 +9,26 @@
     grid-row-gap: 1.5rem;
     justify-items: center;
 
+    @media only screen and (max-width: $bp-medium) {
+        grid-column: 1 / -1 ;
+        
+    }
+
     &__list {
         display: grid;
         grid-template-columns: repeat(2, max-content);
-        grid-template-rows: repeat(3, 1fr);
         grid-column-gap: 1.5rem;
         grid-row-gap: 5vh;
         justify-items: start;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-template-columns: repeat(6, max-content);   
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            grid-template-columns: repeat(2, max-content);
+        }
     }
 
     &__img {
