--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,11 +2,18 @@
     &__pictures {
         grid-column: full-start / col-end 4;
         background-image:linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
-
+        background-size: cover;
+        
         display: grid;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(6, 1fr);
         align-items: center; 
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1 ;
+            padding: 3rem;
+            width: 100%;
+        }
 
     }
 
@@ -14,6 +21,12 @@
         width: 100%;
         grid-area: 2/2/6/6;
         box-shadow: 0 2rem 6rem rgba($color: #000000, $alpha:.1);
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / 5;
+            grid-row: 1 / -1 ;
+            
+        }
     }
 
     &__img--2 {
@@ -21,6 +34,12 @@
         grid-area: 4/4/6/7;
         z-index: 20;
         box-shadow: 0 2rem 6rem rgba($color: #000000, $alpha:.2);
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-row: 1 / -1 ;
+            width: 100%;
+        
+        }
     }
 
     &__content {
@@ -36,6 +55,11 @@
         display: grid;
         align-content: center;
         justify-items: start;
+
+        @media only screen and (max-width: $bp-medium) {
+            grid-column: 1 / -1 ;
+            grid-row: 5 / 6;
+        }
     }
 
 
